--- a/assets/scss/patterns/_booktower-components.scss
+++ b/assets/scss/patterns/_booktower-components.scss
@@ -11,7 +11,6 @@
 */
 .bt-hero {
   position: relative;
-  overflow: hidden;
   isolation: isolate;
   background-color: var(--bt-gray-25);
   border-bottom: var(--bt-border);
